fix up  spacings on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,19 +21,19 @@ body {
 main {
   margin-left: 0.5rem;  /* Align with the vertical of 'T' in h1 */
   margin-right: 0.5rem;
-  margin-top: calc(2 * var(--spacer-unit));
+  margin-top: calc(0.5 * var(--spacer-unit));
 }
 
 nav {
   font-family: var(--heading-font-family);
   margin-left: 0.5rem;  /* Align with the vertical of 'T' in h1 */
   margin-right: 0.5rem;
-  font-size: 1.5rem;
-  line-height: 2.5rem;
+  font-size: 1rem;
+  line-height: 2rem;
 }
 
 nav a {
-  margin-right: var(--spacer-unit);
+  margin-right: calc(0.5 * var(--spacer-unit));
 }
 
 
@@ -50,11 +50,11 @@ h2 {
   font-family: var(--heading-font-family);
   font-style: italic;
   font-weight: lighter;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   color: var(--accent-text-color);
   margin-top: 0;
   margin-left: 0.3rem; /* Align with the vertical of 'T' in h1 */
-  margin-bottom: calc(2 * var(--spacer-unit));
+  margin-bottom: var(--spacer-unit);
 }
 
 h3 {
@@ -62,6 +62,7 @@ h3 {
   font-weight: normal;
   font-family: var(--heading-font-family);
   color: var(--accent-text-color);
+  margin-top: var(--spacer-unit);
 }
 
 h3 em {
@@ -81,7 +82,7 @@ h4 {
   color: var(--accent-text-color);
   font-weight: lighter;
   font-style: italic;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
 }
 
 
@@ -206,6 +207,8 @@ blockquote {
 /* large and up */
 @media only screen and (min-width: 992px) {
 
+
+
   body {
     width: 80%;
     max-width: 1200px;
@@ -232,16 +235,28 @@ blockquote {
   h2 {
     font-size: 2.4rem;
     margin-left: 0.7rem; /* Align with vertical of T in h1 */
+    margin-bottom: calc(2 * var(--spacer-unit));
+  }
+
+  h3 {
+    margin-top: calc(2 * var(--spacer-unit));
   }
 
   nav {
     margin-left: 1rem; /* Align with vertical of T in h1 */
     margin-right: 1rem;
+    line-height: 2.5rem;
+    font-size: 1.5rem;
+  }
+
+  nav a {
+    margin-right: var(--spacer-unit);
   }
 
   main {
     margin-left: 1rem; /* Align with vertical of T in h1 */
     margin-right: 1rem;
+    margin-top: calc(2* var(--spacer-unit));
   }
 
   address {
